created layout activity_question with 4 questions of different types( one check box, one radio button, two text entry) and a submit button

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -4,4 +4,5 @@
     <string name="start_button">clicca qui quando sei pronto</string>
     <string name="android_shape_with_words_inside">forma android con parole chiave all\'interno</string>
     <string name="observe_carefully">osserva attentamente</string>
+    <string name="submit">invia</string>
 </resources>
